# diplomacy

./: .gitignore  .pre-commit-config.yaml  .prettierrc.yaml  CODE_OF_CONDUCT.md  Dockerfile  Makefile  README.md  compose.yaml  process_game.py  pyproject.toml  requirements-lock.txt  requirements.txt  requirements_dev.txt  setup.py  test_comm_2.py  test_comm_3.py  test_comm_4.py  test_comm_status.py  test_comm_status2.py
diplomacy/: __init__.py  settings.py  version.py
diplomacy/client/: channel.py  connection.py  game_instances_set.py  network_game.py  notification_managers.py  response_managers.py
diplomacy/communication/: notifications.py  requests.py  responses.py
diplomacy/daide/: clauses.py  connection_handler.py  messages.py  notification_managers.py  notifications.py  request_managers.py  requests.py  responses.py  server.py  tokens.py  utils.py
diplomacy/engine/: daide_composer_message.py  game.py  log.py  map.py  message.py  order_log.py  power.py  renderer.py
diplomacy/integration/: base_api.py
diplomacy/negotiation/: negotiation.py  reference.json
diplomacy/server/: connection_handler.py  notifier.py  request_manager_utils.py  request_managers.py  run.py  scheduler.py  server.py  server_game.py  user.py  users.py
diplomacy/tests/: test_datc.py  test_datc_no_check.py  test_datc_no_expand.py  test_game.py  test_map.py  test_pytest.py
diplomacy/utils/: common.py  constants.py  convoy_paths.py  equilateral_triangle.py  errors.py  exceptions.py  export.py  game_phase_data.py  jsonable.py  keywords.py  models.py  network_data.py  (+9 more)
docs/: conf.py
(+107 files in other folders)
